--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     <h4>Address</h4>
     <p>L.C.H.E.,Ejigbo,Lagos Nigeria</p>
     <h4>Home Town</h4>
-    <p>Ogun state,Nigeria</p>
+    <p>State of Origin</p>
+    <h4>Home Town</h4>
+    <p>Ijebu-ode</p>
 </div>
 
 </div>
