--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <p>Engineer</p>
     <h4>Address</h4>
     <p>L.C.H.E.,Ejigbo,Lagos Nigeria</p>
+    <h4>State of Origin</h4>
+    <p>Ogun State,Nigeria</p>
     <h4>Home Town</h4>
-    <p>State of Origin</p>
-    <h4>Home Town</h4>
-    <p>Ijebu-ode</p>
+    <p>Ijebu-Ode</p>
 </div>
 
 </div>
